commit maj footer

--- a/maquette/css/style_headerfooter.css
+++ b/maquette/css/style_headerfooter.css
@@ -4,3 +4,9 @@
 .marge-top-deco{
 	margin-top: 5px;
 }
+.marge-footer{
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    padding : 10px 10px 10px 10px;
+}
