--- a/maquette/css/style_headerfooter.css
+++ b/maquette/css/style_headerfooter.css
@@ -10,3 +10,19 @@
     right: 0px;
     padding : 10px 10px 10px 10px;
 }
+
+.marge-top-login
+{
+	margin-top:200px;
+}
+
+.center
+{
+	text-align:center;
+}
+
+.border-image{
+	border-width:2px;
+	border-color:blue;
+	border-style:dashed;
+}
