Finalisation des pages de creation de media et d'adherent avec les interaction serveur qui vont avec

--- a/app/css/style_headerfooter.css
+++ b/app/css/style_headerfooter.css
@@ -10,7 +10,7 @@ body, html, zz.wrapper {
 }
 
 .marge-footer{
-	position: fixed;
+	/*position: fixed;*/
     height: 40px;
     bottom: 0;
     width: 1170px;
