--- a/app/css/style_headerfooter.css
+++ b/app/css/style_headerfooter.css
@@ -13,7 +13,7 @@ body, html, zz.wrapper {
 	/*position: fixed;*/
     height: 40px;
     bottom: 0;
-    width: 1170px;
+    /*width: 1170px;*/
     text-align: right;
 }
 
